# gloss

./: CMakeLists.txt  README.md
gloss/: CMakeLists.txt  Generator.cpp  Generator.hpp  LanguageFile.cpp  LanguageReader.hpp  StringViewScanner.cpp  argparse_nowarn.hpp  main.cpp
gloss-example/: CMakeLists.txt  example.cpp  test.lang  test2.lang  test3.lang
gloss-reader/: CMakeLists.txt  LanguageFile.hpp  LanguageReader.cpp  StringViewScanner.cpp  StringViewScanner.hpp
